# cloudfoundry_circleci

./: .dockerignore  .gitignore  README.md  dockerfile
.circleci/: config.yml
docs/artifacts/: design.puml
src/: cleaned_bert_similarity.py  requierments.txt  requirements.txt
src/bert/: cleaned_bert_similarity.py  db.py  poetry.dockerfile  pyproject.toml  requirements.txt  server.py
src/bert/app/: server.py
src/buildpack_deploy/bert/: requirements.txt
src/datagen/: datagen.py  datagen.py.bak  manifest.json  requirements.txt
src/datagen/templates/: home.html
src/hello_world/: manifest.yml  server.py
src/hello_world/templates/: index.html
src/spacy/: datagen.py  db.py  manifest.yml  requirements.txt  routes.py  server.py  spacy_similarity.py.bak
src/spacy/static/css/: styles.css
src/spacy/static/js/: buttons.js  nasa-background.js
src/spacy/templates/: base.html  display_matches.html  index.html  select_user.html
src/spacy/utilities/: auth2.py  datagen.py
